[gd_scene load_steps=8 format=2]

[ext_resource path="res://Reused/ReusableSystems/OptionEditor/OptionContainer/OptionContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Reused/ReusableSystems/OptionEditor/OptionTabs/OptionTabs.tscn" type="PackedScene" id=2]
[ext_resource path="res://Reused/ReusableSystems/OptionEditor/OptionEditor.tscn" type="PackedScene" id=3]
[ext_resource path="res://Nodes/GeneralMenus/Settings/Settings.gd" type="Script" id=4]
[ext_resource path="res://Resources/Image/Back.png" type="Texture" id=5]
[ext_resource path="res://Reused/ReusableSystems/OptionEditor/OptionItem/ItemSlider/ItemSlider.tscn" type="PackedScene" id=6]
[ext_resource path="res://Reused/ReusableSystems/OptionEditor/OptionItem/ItemList/ItemList.tscn" type="PackedScene" id=7]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )

[node name="_Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionEditor" parent="." instance=ExtResource( 3 )]
size_flags_horizontal = 3
size_flags_vertical = 3
file_location = "user://Settings.json"

[node name="Options" parent="OptionEditor" instance=ExtResource( 2 )]
anchor_bottom = 1.006
margin_bottom = -0.320007
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Graphics" parent="OptionEditor/Options/Content" index="0" instance=ExtResource( 1 )]

[node name="OptionContainer" parent="OptionEditor/Options/Content/Graphics" index="0"]
margin_bottom = 664.0

[node name="Shadows" parent="OptionEditor/Options/Content/Graphics/OptionContainer" index="0" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}
default_value = [ "High" ]
list_items = [ "None", "Low", "High" ]

[node name="Sound" parent="OptionEditor/Options/Content" index="1" instance=ExtResource( 1 )]
visible = false

[node name="OptionContainer" parent="OptionEditor/Options/Content/Sound" index="0"]
margin_bottom = 664.0

[node name="Master Volume" parent="OptionEditor/Options/Content/Sound/OptionContainer" index="0" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 50.0
focus_neighbour_top = NodePath("../../../../TabScrollContainer/TabHBoxContainer")
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music Volume" parent="OptionEditor/Options/Content/Sound/OptionContainer" index="1" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 54.0
margin_right = 1280.0
margin_bottom = 104.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound Volume" parent="OptionEditor/Options/Content/Sound/OptionContainer" index="2" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 108.0
margin_right = 1280.0
margin_bottom = 158.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 105.0
margin_bottom = 60.0
focus_neighbour_right = NodePath("../OptionEditor/Options/TabScrollContainer/TabHBoxContainer")
focus_neighbour_bottom = NodePath("../OptionEditor/Options/Content")
text = "Back"
icon = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="tab_looped" from="OptionEditor/Options" to="." method="_on_Options_tab_looped"]
[connection signal="value_changed" from="OptionEditor/Options/Content/Graphics/OptionContainer/Shadows" to="." method="_on_Shadows_value_changed"]
[connection signal="cancel" from="OptionEditor/Options/Content/Sound" to="OptionEditor" method="_on_Options_cancel"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]

[editable path="OptionEditor"]
[editable path="OptionEditor/Options"]
[editable path="OptionEditor/Options/Content/Graphics"]
[editable path="OptionEditor/Options/Content/Sound"]
